services/api-backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-backend-ingress
  namespace: CloudToLocalLLM
  annotations:
    kubernetes.io/ingress.class: 'gce'
    kubernetes.io/ingress.global-static-ip-name: 'CloudToLocalLLM-static-ip'
    networking.gke.io/managed-certificates: 'CloudToLocalLLM-certificate'
spec:
  rules:
    - host: api.pistisai.app
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-backend
                port:
                  number: 8080
